data/derived/sp14/progs/unify/prog0038.ml.out
Characters 73-89:
  | hd::tl -> (listReverse tl)::hd;;
              ^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
